realisation with pointer

--- a/Sem2Lab1.vcxproj
+++ b/Sem2Lab1.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Header1.cpp" />
     <ClCompile Include="Source1.cpp" />
     <ClCompile Include="Source2.cpp" />
   </ItemGroup>
