--- a/Sem2Lab1.vcxproj.filters
+++ b/Sem2Lab1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Source2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Header1.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header1.h">
